syntax = "proto3";

import "aelf/core.proto";
import "aelf/options.proto";
import "acs12.proto";

package ramp;

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

// the contract definition: a gRPC service definition.
service RampInterface {
    rpc ForwardMessage (ForwardMessageInput) returns (google.protobuf.Empty) {}
}

message ForwardMessageInput {
    int64 source_chain_id = 1;
    int64 target_chain_id = 2;
    bytes sender = 3;
    bytes message = 4;
}